# turbo-guacamole

./: .gitignore  README.md  bitbucket_client.py  bitbucket_language_scraper.py  openapi_app.py  pyproject.toml  requirements.txt
src/bitbucket_language_scraper/: README.md  __init__.py  __main__.py  cli.py
src/bitbucket_language_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
