[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitbucket-language-scraper"
version = "0.1.0"
description = "Bitbucket Cloud and Server/Data Center language scraper."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
bitbucket-language-scraper = "bitbucket_language_scraper.cli:entrypoint"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

